@@ -6,7 +6,7 @@ with the exception of the following files:
 	WireFrameBoxPortrayal3D.java	[Partial] Sun Open Source License
 	ToolTipBehavior.java		[Partial] Sun Open Source License
 	SelectionBehavior.java		[Partial] Sun Open Source License
-	GullCG.java			Sun Open Soure License
+	GullCG.java			Sun Open Source License
 	MersenneTwisterFast.java	BSD License
 
 For all remaining files, the Academic Free License is specified below.
